typescript/checker/tests/conformance/expressions/thisKeyword/thisInObjectLiterals.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            467,
        ),
        hi: BytePos(
            470,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/thisKeyword/thisInObjectLiterals.ts:21:5
   |
21 | var obj: { f: () => any; };
   |     ^^^

